Fix for Safari specific overflow issue

--- a/src/components/MapPage.module.scss
+++ b/src/components/MapPage.module.scss
@@ -1,7 +1,7 @@
 .mapWrapper {
   position: relative;
-  height: 100%;
   width: 100%;
+  flex: 1;
 
   & > div {
     height: 100%;
